test/asm/macro-arg-in-string.err
ERROR: macro-arg-in-string.asm(9) -> macro-arg-in-string.asm::print1(2):
    Illegal character escape '!'
error: Assembly aborted (1 errors)!
